[W-12637932 + W-13210057] minor cosmetic fixes (#402)
* fix nav height

* move submit button to left of input

* update header and footer

* clean up

* update header

* adjust submit button position

* add submit button text

* add back commented kbd block

* less right margin

* toggle submit text at start

* increase timeout duration

* fix left magnifier icon position

* set search box width

* remove extra space

* make archive link icons closer

--- a/src/css/specific/nav.css
+++ b/src/css/specific/nav.css
@@ -181,7 +181,7 @@ svg.nav-icon {
     & > .nav-list ~ .nav-list {
       display: none;
     }
-    & [aria-current=page] {
+    &[aria-current=page] {
       background: var(--aluminum-3);
       border-left: 3px solid var(--secondary-navy);
       color: var(--secondary-navy);
@@ -189,17 +189,20 @@ svg.nav-icon {
       width: -moz-available;
       width: -webkit-fill-available;
     }
+    &[data-component="archive"] {
+      width: min-content;
+    }
     &.is-active {
       & > .nav-item-toggle::before {
         content: "-";
       }
     }
     & .external-link-image {
+      margin-left: 10px;
       margin-right: -5px;
       width: 12px;
 
       @media (--md) {
-        margin-left: 4px;
         margin-right: 0;
       }
     }
